[rpc] Make the TLS tests run on JDK 17 and later
Address review feedback on #3813: every test in SslContextFactoryTest
errored on JDK 17 and only passed on 11, which CI does not catch
because it runs the Java tests on 11 (and nightly on 8).

Netty's SelfSignedCertificate generates the certificate with
BouncyCastle when it is on the classpath and otherwise falls back to a
generator built on sun.security.x509 internals. Add bcpkix-jdk18on in
test scope so the first path is taken. No production dependency and
nothing shaded, so the shipped artifacts are unchanged.

Verified: 24/24 tests pass on JDK 11, 17 and 24 with this change,
against 24 errors on 17 and 24 without it. The alternative
--add-opens=java.base/sun.security.x509=ALL-UNNAMED in
extraJavaTestArgs was tried too: it fixes JDK 17 but still fails on 24,
which is why the dependency is the better answer.

bcutil and bcprov are bcpkix's own transitive dependencies, pinned here
because bcpkix declares them through version ranges — those resolve
differently over time and make every build fetch their
maven-metadata.xml. All three artifacts target Java 8 bytecode, so the
nightly JDK 8 test run keeps working.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>